<?xml version="1.0"?>
<package format="3">
  <name>sensor_timing_viz</name>
  <version>0.1.0</version>
  <description>Standalone ROS 2 package for interactive sensor timing visualization from rosbag2 data.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
